--- a/Ara2.AraDiv/Ara2.AraDiv.csproj
+++ b/Ara2.AraDiv/Ara2.AraDiv.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AraComponetesServer\AraDiv.cs" />
+    <Compile Include="Ara2ComponentsServer\AraDiv.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
