--- a/Ara2.AraDiv/Ara2.AraDiv.csproj
+++ b/Ara2.AraDiv/Ara2.AraDiv.csproj
@@ -50,12 +50,33 @@
   <ItemGroup>
     <None Include="Ara2\Components\AraDiv\CREDITS.md" />
     <None Include="Ara2\Components\AraDiv\LICENSE.md" />
+    <None Include="Nuget\Ara2.AraDiv.nuspec">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Ara2\Components\AraDiv\AraDiv.js" />
+    <Content Include="Nuget\NuGet.exe" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="PostBuildMacros">
+    <GetAssemblyIdentity AssemblyFiles="$(TargetPath)">
+      <Output TaskParameter="Assemblies" ItemName="Targets" />
+    </GetAssemblyIdentity>
+    <ItemGroup>
+      <VersionNumber Include="@(Targets->'%(Version)')" />
+    </ItemGroup>
+  </Target>
+  <PropertyGroup>
+    <PostBuildEventDependsOn>
+    $(PostBuildEventDependsOn);
+    PostBuildMacros;
+  </PostBuildEventDependsOn>
+    <PostBuildEvent>cd $(ProjectDir)Nuget
+del *.nupkg
+nuget.exe pack $(SolutionName).nuspec -version @(VersionNumber)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
